--- a/static/source/less/variables.less
+++ b/static/source/less/variables.less
@@ -11,7 +11,7 @@
 
 @min-page-width:        1200px;
 
-@top-bar-height:        7rem;
+@top-bar-height:        4.5rem;
 @bottom-bar-height:     4rem;
 @header-height:         @top-bar-height + @bottom-bar-height;
 
